--- a/api-urlshortener/package.json
+++ b/api-urlshortener/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "demo oracle api",
   "main": "server.js",
-   "scripts": {
+  "scripts": {
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "env-cmd": "^9.0.2",
     "express": "^4.16.4",
